--- a/mi_pagina_web/bio.html
+++ b/mi_pagina_web/bio.html
@@ -9,7 +9,7 @@
         <header>
         <nav class="row">
             <div class="logo">
-                <img src="imagenes/logo2.png">
+                <img src="imagenes/logo2.PNG">
             </div>
         <ul class="main-nav">
             <li><a href="index.html">HOME</a></li>
